--- a/mystorefront-childtheme-wp/style.css
+++ b/mystorefront-childtheme-wp/style.css
@@ -1,14 +1,20 @@
 /*
- Theme Name:   NMA Child Theme
- Theme URI:    http://nma.kcc.hawaii.edu
- Description:  NMA Custom Store Front Child Theme
+ Theme Name:   Storefront Child Theme
+ Description:  A Storefront WooCommerce Child Theme
  Author:       John Doe
- Author URI:   http://nma.kcc.hawaii.edu
+ Author URI:   https://github.com/johndoenma
  Template:     storefront
- Version:      1.0.0
- Text Domain:  nma-childtheme
+ Text Domain:  storefront-child
 */
 
-.main-navigation ul li a:hover, .main-navigation ul li:hover > a, .site-title a:hover, a.cart-contents:hover, .site-header-cart .widget_shopping_cart a:hover, .site-header-cart:hover > li > a, .site-header ul.menu li.current-menu-item > a {
-    color: red;
+/* To remove the woocommerce sidebar and go full-width via CSS
+.woocommerce-active #primary {
+    width: 100%;
+    float: none;
 }
+.woocommerce-active #secondary { display: none; }
+ */
+
+/* Hide Select Items
+.home .entry-header { display: none; }
+ */
