--- a/sitebase-gulp/mystorefront-childtheme-wp/style.css
+++ b/sitebase-gulp/mystorefront-childtheme-wp/style.css
@@ -15,5 +15,6 @@
 .woocommerce-active #secondary { display: none; }
  */
 
-/* Hide Select Items */
+/* Hide Select Items
 .home .entry-header { display: none; }
+ */
