renamed parent theme from storefront to generic

--- a/mychildtheme-wp/style.css
+++ b/mychildtheme-wp/style.css
@@ -4,7 +4,7 @@
  Description:  NMA Custom Store Front Child Theme
  Author:       John Doe
  Author URI:   http://nma.kcc.hawaii.edu
- Template:     storefront
+ Template:     parent-theme-name
  Version:      1.0.0
  Text Domain:  nma-childtheme
 */
