--- a/sassy-base-step5-layout/scss/style.scss
+++ b/sassy-base-step5-layout/scss/style.scss
@@ -5,6 +5,7 @@ $type-linewidth: 38em;
 
 // COLORS
 $accent-color: #c6538c;
+$hero-bg-color: #faeff5;
 $type-color: #333;
 $type-color-lightgrey: rgba(0, 0, 0, 0.5);
 $type-color-links: #39c;
