--- a/sassy-base-step4-responsive/scss/style.scss
+++ b/sassy-base-step4-responsive/scss/style.scss
@@ -10,7 +10,7 @@ $type-color-lightgrey: rgba(0, 0, 0, 0.5);
 $type-color-links: #39c;
 $type-color-linksdark: #069;
 
-// REAKPOINTS
+// BREAKPOINTS
 $breakpoint-small: 768px;
 $breakpoint-medium: 1050px;
 $breakpoint-large: 1250px;
