added 2019 sassybase files

--- a/sassybase-2019/sassybase-2019-step4-respnsive/css/style.css
+++ b/sassybase-2019/sassybase-2019-step4-respnsive/css/style.css
@@ -93,3 +93,56 @@ a.button:hover {
   color: #fff;
   border-color: #003;
   text-decoration: none; }
+
+/* MEDIA  */
+/* Responsive Images */
+img {
+  max-width: 100%;
+  height: auto; }
+
+/* LAYOUT */
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+/*
+#MEDIA QUERIES (Mobile First)
+	#DEFAULT+ (Mobile First - Default Settings in the CSS Above)
+	#SMALL- (Mobile Only Overrides) - max-width: 767px
+	#MEDIUM+ (Tablet) - min-width: 768px
+	#LARGE+ (Desktop) - min-width: 1050px
+	#EXTRALARGE+ (Desktop+) - min-width: 1250px  */
+/* SMALL+ (Mobile First Defaults) */
+body {
+  margin: 0;
+  padding: 0; }
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 4%; }
+
+/* SMALL ONLY (e.g. for mobile overrides) */
+@media (max-width: 767px) {
+  /* SMALL BODY TYPE ON SMALL SCREEENS ONLY */
+  body {
+    font-size: 88.75%;
+    /* 14px; */ } }
+
+/* #MEDIUM+ */
+/* #LARGE+  */
+@media (min-width: 1050px) {
+  /* FIXED WIDTH CONTAINER AT MEDIUM SIZE FOR LARGE SCREENS */
+  .container {
+    width: 1000px;
+    padding: 0 50px; } }
+
+/* #EXTRA-LARGE+ */
+@media (min-width: 1250px) {
+  /* EXTRA-LARGE BODY TYPE ON EXTRA-LARGE SCREEN */
+  body {
+    font-size: 112.5%;
+    /* 18px; */ }
+  /* FIXED WIDTH CONTAINER AT LARGER SIZE FOR EXTRA-LARGE SCREENS */
+  .container {
+    width: 1200px; } }
