--- a/sassybase-2019/sassybase-2019-step5-layout/scss/style.scss
+++ b/sassybase-2019/sassybase-2019-step5-layout/scss/style.scss
@@ -9,7 +9,16 @@ $type-color-lightgrey: rgba(0, 0, 0, 0.5);
 $type-color-links: #036;
 $type-color-linksdark: #003;
 $accent-color: rgba(198,83,140,1);
+$hero-bg-color: #faeff5;
+
+// BREAKPOINTS
+$breakpoint-small: 768px;
+$breakpoint-medium: 1050px;
+$breakpoint-large: 1250px;
 
 @import "partials/toc";
 @import "partials/typography";
 @import "partials/buttons"; 
+@import "partials/media";  
+@import "partials/layout";  
+@import "partials/structure";   
