--- a/sassybase-2019/sassybase-2019-step5-layout/scss/style.scss
+++ b/sassybase-2019/sassybase-2019-step5-layout/scss/style.scss
@@ -21,4 +21,5 @@ $breakpoint-large: 1250px;
 @import "partials/buttons"; 
 @import "partials/media";  
 @import "partials/layout";  
-@import "partials/structure";   
+@import "partials/grid";  
+@import "partials/structure";    
